--- a/Transit Alerts/Base.lproj/Main.storyboard
+++ b/Transit Alerts/Base.lproj/Main.storyboard
@@ -20,29 +20,8 @@
                         <subviews>
                             <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1wH-Q6-Jjp">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="67"/>
-                                <subviews>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" usesAttributedText="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8pp-lb-uGa">
-                                        <rect key="frame" x="199" y="15" width="203" height="38"/>
-                                        <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        <attributedString key="attributedText">
-                                            <fragment content="Transit Alerts">
-                                                <attributes>
-                                                    <color key="NSColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <font key="NSFont" size="30" name="HelveticaNeue-Bold"/>
-                                                </attributes>
-                                            </fragment>
-                                        </attributedString>
-                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                    </textView>
-                                </subviews>
                                 <color key="backgroundColor" red="0.43137254899999999" green="0.43921568630000002" blue="0.87843137250000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="tintColor" red="0.43137254899999999" green="0.43921568630000002" blue="0.87843137250000003" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstItem="8pp-lb-uGa" firstAttribute="centerX" secondItem="1wH-Q6-Jjp" secondAttribute="centerX" id="7cO-CS-jO8"/>
-                                    <constraint firstItem="8pp-lb-uGa" firstAttribute="leading" secondItem="1wH-Q6-Jjp" secondAttribute="leading" constant="199" id="Bss-Un-DeD"/>
-                                    <constraint firstItem="8pp-lb-uGa" firstAttribute="top" secondItem="1wH-Q6-Jjp" secondAttribute="top" constant="15" id="Fr5-IM-gOM"/>
-                                    <constraint firstAttribute="trailing" secondItem="8pp-lb-uGa" secondAttribute="trailing" constant="198" id="jrx-Ih-4iV"/>
-                                </constraints>
                             </view>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="ueK-xh-1TI">
                                 <rect key="frame" x="0.0" y="66" width="600" height="186"/>
@@ -61,6 +40,9 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Train" image="first" id="acW-dT-cKf"/>
+                    <connections>
+                        <outlet property="map" destination="ueK-xh-1TI" id="CCY-SK-mnQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
